--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,16 @@ springdoc:
     url: /v3/api-docs.yaml
 server:
   port: ${PORT:8080}
-
+resilience4j:
+  circuitbreaker:
+    instances:
+      Index:
+        registerHealthIndicator: true
+        ringBufferSizeInClosedState: 5
+        ringBufferSizeInHalfOpenState: 3
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        maxRetryAttempts: 3
+        waitDuration: 5000
 
 
