--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,13 @@ plugins {
 	id 'jacoco'
 	// CODENARC!
 	id 'codenarc'
+	// Swagger!
+	id 'org.hidetake.swagger.generator' version '2.19.2'
 }
 
 apply from: 'config/gradle/jacoco.gradle'
 apply from: 'config/gradle/codenarc.gradle'
+apply from: 'config/gradle/swagger.gradle'
 
 group = 'com.github.jvalentino'
 version = '0.0.1'
@@ -55,6 +58,17 @@ dependencies {
 	testImplementation 'cglib:cglib-nodep:3.3.0'
 	testImplementation 'org.objenesis:objenesis:3.3'
 
+	// Swagger!
+	swaggerCodegen 'org.openapitools:openapi-generator-cli:3.3.4'
+	implementation 'io.swagger:swagger-annotations:1.5.17'
+	implementation 'com.squareup.okhttp:okhttp:2.7.5'
+	implementation 'com.squareup.okhttp:logging-interceptor:2.7.5'
+	implementation 'com.google.code.gson:gson:2.8.1'
+	implementation 'io.gsonfire:gson-fire:1.8.0'
+	implementation group: 'org.apache.oltu.oauth2', name: 'org.apache.oltu.oauth2.client', version: '1.0.1'
+	implementation 'org.threeten:threetenbp:1.3.5'
+
 }
+
 
 
