--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'io.micrometer:micrometer-registry-prometheus'
 
+	// Security (Login)
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation group: 'org.springframework.session', name: 'spring-session-core', version: '2.7.0'
+
 	// Testing Magic
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
