--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,10 @@ services:
     command: redis-server --save 20 1 --loglevel warning --requirepass redis
     volumes:
       - ./dev-redis:/data
+  wiremock:
+    container_name: juliet-wiremock-bff
+    image: wiremock/wiremock:2.35.0
+    volumes:
+      - ./config/wiremock:/home/wiremock
+    ports:
+      - 8888:8080
